update baseURL from example.com to guogy.netlify.app

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://www.example.com"
+baseURL = "https://guogy.netlify.app/"
 title = "Home"
 theme = "hugo-coder"
 languageCode = "en"
